deployment/base/api-gateway/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway-deployment
spec:
  selector:
    matchLabels:
      name: api-gateway
  template:
    metadata:
      labels:
        name: api-gateway
    spec:
      containers:
        - name: api-gateway
          image: docker.io/wahlgrena/api-gateway:latest
          livenessProbe:
            initialDelaySeconds: 10
            httpGet:
              port: 80
              path: /
          readinessProbe:
            initialDelaySeconds: 10
            httpGet:
              port: 80
              path: /
          resources:
            limits:
              cpu: "1000m"
              memory: "512Mi"
            requests:
              cpu: "100m"
              memory: "512Mi"
          ports:
            - containerPort: 80
              name: app-port
          # envFrom:
          #   - configMapRef:
          #       name: gateway-config
