deployment/base/api-gateway/cluster-ip.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway-url
  labels:
    prometheus: monitoring
spec:
  type: ClusterIP
  ports:
    - name: app-port
      port: 80
      targetPort: 80
  selector:
    name: api-gateway
